--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-Blah
+---
+layout: default
+title: Home
+---
+
+{% assign page = site.posts.first %}
+{% assign content = page.content %}
+{% include post.html %}
